--- a/css/styles.css
+++ b/css/styles.css
@@ -179,7 +179,7 @@ background: url('/images/logo_s_on.png');
    width: 100%;
    color: #666;
    background-color: #EFEFEF;
-
+   position: relative;
 }
 
 .data_row {
@@ -365,32 +365,6 @@ background: url('/images/logo_s_on.png');
 .pageination span {
    vertical-align: middle;
 }
-/* Add New Button */
-.add-new {
-   font-family: Lato, Arial, serif; font-weight: 400; font-size: 1.1em;
-   text-align: center;
-   margin: 2px;
-   background: url('/images/button.png');
-   color: #fff;
-   display:inline-block;
-   border: 1px solid #5797c7;
-   width: 100px;
-   height: 30px;
-   line-height: 1.5;
-}
-/* Send Request Button */
-.add-new-sr {
-   font-family: Lato, Arial, serif; font-weight: 400; font-size: 1.1em;
-   text-align: center;
-   margin-bottom: 10px;
-   background: url('/images/button.png');
-   color: #fff;
-   display:inline-block;
-   border: 1px solid #5797c7;
-   width: 180px;
-   height: 30px;
-   line-height: 1.5;
-}
 /* Text Field */
 .select {
    font-family: Lato, Arial, serif; font-weight: 400; font-size: 1.1em;
@@ -418,6 +392,33 @@ background: url('/images/logo_s_on.png');
    display:inline-block;
    border: 1px solid #5797c7;
 }
+
+.level-1  {
+	background-color: #20384F;
+    font-size: larger;
+    color: #FFF;
+    font-weight:  bold;
+    /* margin: 10px; */
+    height: 40px;
+    vertical-align: middle;
+    line-height: 40px;
+	text-align: left;
+    padding-left: 10px;
+}
+
+.level-2 {
+	background-color: #2D5070;
+    font-size: large;
+    color: #FFF;
+    font-weight:  bold;
+    /* margin: 10px; */
+    height: 30px;
+    vertical-align: middle;
+	text-align: left;
+    line-height: 30px;
+    padding-left: 20px;
+}
+
 .update-row-red div {
    background-color: #b87e76;
    color: #000;
@@ -440,7 +441,7 @@ background: url('/images/logo_s_on.png');
 .request-table {
    font-size: 1.1em;
    width: 500px;
-   height: 300px;
+   height: 500px;
    margin: auto;
    padding: 30px;
    line-height: 30px;
@@ -449,7 +450,16 @@ background: url('/images/logo_s_on.png');
    -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
 }
-}
+
+.request-select {
+   font-family: Lato, Arial, serif; font-weight: 400; font-size: 1.1em;
+   color: #666;
+   top: 25px;
+   margin-left: 20px;
+   display:inline-block;
+   border: 1px solid #5797c7;
+} 
+
 
 .company-name-hidden {
    display: none;
@@ -582,4 +592,62 @@ background: url('/images/logo_s_on.png');
 
 .user_warning {
    color: #FF0000;
+}
+
+/* Add New Button */
+.add-new {
+   font-family: Lato, Arial, serif; font-weight: 400; font-size: 1.1em;
+   text-align: center;
+   margin: 2px;
+   background: url('/images/button.png');
+   color: #fff;
+   display:inline-block;
+   border: 1px solid #5797c7;
+   width: 100px;
+   height: 30px;
+   line-height: 1.5;
+}
+.add-new a{
+   color: #fff;
+}
+/* Send Request Button */
+.add-new-sr {
+   font-family: Lato, Arial, serif; font-weight: 400; font-size: 1.1em;
+   text-align: center;
+   margin-bottom: 10px;
+   background: url('/images/button.png');
+   color: #fff;
+   display:inline-block;
+   border: 1px solid #5797c7;
+   width: 180px;
+   height: 30px;
+   line-height: 1.5;
+}
+
+#swppp-menu {
+   font-family: Lato, Arial, serif; font-weight: 400; font-size: 1.1em;
+   text-align: center;
+   margin-bottom: 10px;
+   color: #5797c7;
+   display:inline-block;
+   border: 1px solid #5797c7;
+   width: 300px;
+   height: 30px;
+   line-height: 1.5;
+   float:right;
+   clear: both;
+   display: block;
+}
+
+#map-canvas {
+	width: 419px; 
+	height: 419px; 
+	position: absolute; 
+	right: 0px; 
+	top: 130px;
+	margin-top: 0px !important;
+}
+
+#map-canvas div {
+	margin-top: 0px !important;
 }
